--- a/spring-basic/spring-basic/core/build.gradle
+++ b/spring-basic/spring-basic/core/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.slf4j:slf4j-api:2.0.9'
+	runtimeOnly 'ch.qos.logback:logback-classic:1.4.14'
 }
 
 tasks.named('test') {
