Spring Basic Component & Test Adjustments

--- a/spring-basic/spring-basic/core.remind/src/main/resources/application.properties
+++ b/spring-basic/spring-basic/core.remind/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=core.remind
 spring.output.ansi.enabled=always
+
+
+# ??? ???? ?? ??
+logging.level.org.springframework.context=DEBUG
+logging.level.org.springframework.beans=DEBUG
+
+# ???? ?? ?? ??
+logging.level.org.springframework.context.annotation=DEBUG
