--- a/spring-basic/spring-basic/core/build.gradle
+++ b/spring-basic/spring-basic/core/build.gradle
@@ -19,11 +19,23 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.slf4j:slf4j-api:2.0.9'
 	runtimeOnly 'ch.qos.logback:logback-classic:1.4.14'
 }
+
+//lombok 설정 추가
+configurations {
+	compileOnly{
+		extendsFrom annotationProcessor
+	}
+}
+
 
 tasks.named('test') {
 	useJUnitPlatform()
