--- a/spring-basic/spring-basic/core/src/main/resources/application.properties
+++ b/spring-basic/spring-basic/core/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=core
 spring.output.ansi.enabled=always
 spring.main.allow-bean-definition-overriding=false
 
+# Spring ???? ?? ?? ?? ??
+logging.level.org.springframework.context=DEBUG
+logging.level.org.springframework.beans=DEBUG
+
