--- a/spring-mvc2/livecode/message/build.gradle
+++ b/spring-mvc2/livecode/message/build.gradle
@@ -25,6 +25,13 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+sourceSets {
+	main {
+		resources {
+			srcDirs = ['src/main/resources']
+		}
+	}
+}
 
 test {
 	useJUnitPlatform()
